pom.xml: + Commented the compiler version 16.